--- a/deny.toml
+++ b/deny.toml
@@ -39,6 +39,8 @@ ignore = [
 
     # Temporarily allow until arrow family of crates updates `lexical-core` to 1.0
     "RUSTSEC-2023-0086",
+    # todo: maybe allow unmaintained
+    "RUSTSEC-2021-0127"
 ]
 # Threshold for security vulnerabilities, any vulnerability with a CVSS score
 # lower than the range specified will be ignored. Note that ignored advisories
